[package]
name = "crx2rnx"
version = "2.5.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX decompression command line utility"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/crx2rnx"
keywords = ["geo", "compression", "decompression"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
rinex = { git = "https://github.com/rtk-rs/rinex", branch = "main", features = ["flate2"] }
